# birdcam

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
scripts/: setup.sh
src/birdcam/: backfill.py  buffer.py  classifier.py  config.py  db.py  detector.py  main.py  storage.py
src/birdcam/web/: app.py
src/birdcam/web/templates/: base.html  detail.html  index.html  live.html
systemd/: birdcam.service
tests/: test_backfill.py  test_buffer.py  test_db.py  test_storage.py
